// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Navigation should correctly render amp navigation 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  margin: 0 auto;
  border-bottom: 0.0625rem solid #B80000;
  opacity: 0.7;
}

.emotion-1 {
  position: relative;
  background-color: #FFFFFF;
}

@media (max-width: 37.4375rem) {
  .emotion-1.si-nav-open {
    background-color: #222222;
  }
}

.emotion-2 {
  position: relative;
  max-width: 63.4rem;
  margin: 0 auto;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-2 {
    margin: 0 auto;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-4 {
  position: relative;
  width: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  z-index: 0;
}

.emotion-5::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: #B80000;
  pointer-events: none;
}

@media (max-width: 37.4375rem) {
  .emotion-6.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-6 {
    position: relative;
    min-width: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }

  .emotion-6::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    top: 0;
    inset-inline-end: 0;
    z-index: 3;
    pointer-events: none;
  }

  @media (min-width: 25rem) {
    .emotion-6::after {
      width: 6rem;
    }
  }
}

.emotion-6::after {
  background: linear-gradient(to right, transparent 0%, #B80000 100%);
}

.emotion-6[dir="rtl"]::after {
  background: linear-gradient(to left, transparent 0%, #B80000 100%);
}

.emotion-6 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-6 li a {
  color: #FFFFFF;
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 li a:hover::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li a:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a[data-active="true"] span::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #FFFFFF;
  display: block;
  opacity: 0.3;
}

.emotion-6 li:last-child:before {
  display: none;
}

@media (max-width: 37.4375rem) {
  .emotion-7 {
    position: relative;
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-padding-end: 3rem;
    padding-inline-end: 3rem;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  @media (min-width: 25rem) {
    .emotion-7 {
      -webkit-padding-end: 6rem;
      padding-inline-end: 6rem;
    }
  }

  .emotion-7::-webkit-scrollbar {
    display: none;
  }

  .emotion-7:focus-visible {
    outline: none;
  }

  .emotion-7:focus-visible::after {
    content: '';
    position: absolute;
    inset: 0;
    outline: 0.1875rem solid #000000;
  }
}

.emotion-8 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    overflow: hidden;
  }
}

.emotion-9 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

@media (min-width: 37.5rem) {
  .emotion-9::after {
    content: '';
    position: absolute;
    bottom: -0.0625rem;
    width: 63.5rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-10 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-10 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-10:hover::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-10:focus::after,
.emotion-10:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.1875rem solid #000000;
}

.emotion-11::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-12 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-15 {
  position: relative;
  padding: 0;
  margin: 0;
  border: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  float: inline-start;
  background-color: #B80000;
  color: #FFFFFF;
  width: 2.75rem;
  height: 2.75rem;
}

@media (min-width: 37.5rem) {
  .emotion-15 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-15 {
    width: 2.75rem;
    height: 2.75rem;
  }
}

.emotion-15 svg {
  vertical-align: middle;
  fill: #FFFFFF;
}

.emotion-15:hover,
.emotion-15:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-15:hover::after,
.emotion-15:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.25rem solid #000000;
}

.emotion-16 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-16 {
    fill: linkText;
  }
}

.emotion-21 {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: 99999;
  background-color: #FFFFFF;
  border-bottom: 0.1875rem solid #B80000;
  clear: both;
}

@media (min-width: 37.5rem) {
  .emotion-21 {
    display: none;
    visibility: hidden;
  }
}

.emotion-22 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-23 {
  padding: 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-23:last-child {
  border: 0;
}

.emotion-24 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  position: relative;
  padding: 0.75rem 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-24 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-24 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-24:hover {
  background-color: #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-24:hover::before {
  opacity: 1;
}

.emotion-24::before {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 100%;
  width: 0.25rem;
  background: #B80000;
  display: block;
  opacity: 0;
}

.emotion-24:focus-visible {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
  outline-offset: -0.1875rem;
}

.emotion-25 {
  width: 100%;
  position: relative;
  z-index: 1;
}

@media (max-width: 37.4375rem) {
  .emotion-26.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-26 {
    position: relative;
    min-width: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }

  .emotion-26::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    top: 0;
    inset-inline-end: 0;
    z-index: 3;
    pointer-events: none;
  }

  @media (min-width: 25rem) {
    .emotion-26::after {
      width: 6rem;
    }
  }
}

.emotion-26::after {
  background: linear-gradient(to right, transparent 0%, #FFFFFF 100%);
}

.emotion-26[dir="rtl"]::after {
  background: linear-gradient(to left, transparent 0%, #FFFFFF 100%);
}

.emotion-26 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-26 li a {
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-26 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #B0B2B4;
  display: block;
  opacity: 1;
}

.emotion-26 li:last-child:before {
  display: none;
}

.emotion-29 {
  position: relative;
}

.emotion-29::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 100vw;
  border-bottom: 0.0625rem solid #E6E8EA;
}

<div>
  <div
    class="emotion-0"
  />
  <nav
    class="emotion-1"
    dir="ltr"
    id="si-nav"
    role="navigation"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <div
                class="emotion-7"
              >
                <ul
                  class="emotion-8"
                  role="list"
                >
                  <li
                    class="emotion-9"
                    dir="ltr"
                    role="listitem"
                  >
                    <a
                      aria-label="Home"
                      class="focusIndicatorRemove emotion-10"
                      data-active="true"
                      href="/news"
                    >
                      <span
                        class="emotion-11"
                        id="NavigationLinks-Home"
                        role="text"
                      >
                        <span
                          class="emotion-12"
                        >
                          Current page, 
                        </span>
                        Home
                      </span>
                    </a>
                  </li>
                  <li
                    class="emotion-9"
                    dir="ltr"
                    role="listitem"
                  >
                    <a
                      class="focusIndicatorRemove emotion-10"
                      href="/about"
                    >
                      About
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <amp-state
              id="menuState"
            >
              <script
                type="application/json"
              >
                {"expanded":false}
              </script>
            </amp-state>
            <button
              aria-expanded="false"
              aria-label="Sections"
              class="focusIndicatorRemove emotion-15"
              data-amp-bind-aria-expanded="menuState.expanded ? "true" : "false""
              dir="ltr"
              on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
              si-nav-dropdown-menu.toggleVisibility,
              si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
              si-nav.toggleClass(class=si-nav-open)
            "
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-16 emotion-17"
                data-amp-bind-hidden="menuState.expanded"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="emotion-16 emotion-17"
                data-amp-bind-hidden="!menuState.expanded"
                focusable="false"
                height="2.75rem"
                hidden=""
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="emotion-12"
              >
                Sections
              </span>
            </button>
          </div>
          <div
            class="emotion-21"
            data-e2e="dropdown-nav"
            hidden=""
            id="si-nav-dropdown-menu"
          >
            <ul
              class="emotion-22"
              role="list"
            >
              <li
                class="emotion-23"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-24"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="emotion-25"
        >
          <div
            class="emotion-26"
            data-e2e="scrollable-nav-secondary"
            dir="ltr"
            id="si-nav-scrollable"
          >
            <div
              class="emotion-7"
            >
              <ul
                class="emotion-8"
                role="list"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-29"
      />
    </div>
  </nav>
</div>
`;

exports[`Navigation should correctly render amp navigation on a URL not associated with navigation items 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  margin: 0 auto;
  border-bottom: 0.0625rem solid #B80000;
  opacity: 0.7;
}

.emotion-1 {
  position: relative;
  background-color: #FFFFFF;
}

@media (max-width: 37.4375rem) {
  .emotion-1.si-nav-open {
    background-color: #222222;
  }
}

.emotion-2 {
  position: relative;
  max-width: 63.4rem;
  margin: 0 auto;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-2 {
    margin: 0 auto;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-4 {
  position: relative;
  width: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  z-index: 0;
}

.emotion-5::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: #B80000;
  pointer-events: none;
}

@media (max-width: 37.4375rem) {
  .emotion-6.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-6 {
    position: relative;
    min-width: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }

  .emotion-6::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    top: 0;
    inset-inline-end: 0;
    z-index: 3;
    pointer-events: none;
  }

  @media (min-width: 25rem) {
    .emotion-6::after {
      width: 6rem;
    }
  }
}

.emotion-6::after {
  background: linear-gradient(to right, transparent 0%, #B80000 100%);
}

.emotion-6[dir="rtl"]::after {
  background: linear-gradient(to left, transparent 0%, #B80000 100%);
}

.emotion-6 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-6 li a {
  color: #FFFFFF;
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 li a:hover::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li a:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a[data-active="true"] span::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #FFFFFF;
  display: block;
  opacity: 0.3;
}

.emotion-6 li:last-child:before {
  display: none;
}

@media (max-width: 37.4375rem) {
  .emotion-7 {
    position: relative;
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-padding-end: 3rem;
    padding-inline-end: 3rem;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  @media (min-width: 25rem) {
    .emotion-7 {
      -webkit-padding-end: 6rem;
      padding-inline-end: 6rem;
    }
  }

  .emotion-7::-webkit-scrollbar {
    display: none;
  }

  .emotion-7:focus-visible {
    outline: none;
  }

  .emotion-7:focus-visible::after {
    content: '';
    position: absolute;
    inset: 0;
    outline: 0.1875rem solid #000000;
  }
}

.emotion-8 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    overflow: hidden;
  }
}

.emotion-9 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

@media (min-width: 37.5rem) {
  .emotion-9::after {
    content: '';
    position: absolute;
    bottom: -0.0625rem;
    width: 63.5rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-10 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-10 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-10:hover::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-10:focus::after,
.emotion-10:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.1875rem solid #000000;
}

.emotion-13 {
  position: relative;
  padding: 0;
  margin: 0;
  border: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  float: inline-start;
  background-color: #B80000;
  color: #FFFFFF;
  width: 2.75rem;
  height: 2.75rem;
}

@media (min-width: 37.5rem) {
  .emotion-13 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-13 {
    width: 2.75rem;
    height: 2.75rem;
  }
}

.emotion-13 svg {
  vertical-align: middle;
  fill: #FFFFFF;
}

.emotion-13:hover,
.emotion-13:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-13:hover::after,
.emotion-13:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.25rem solid #000000;
}

.emotion-14 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-14 {
    fill: linkText;
  }
}

.emotion-18 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-19 {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: 99999;
  background-color: #FFFFFF;
  border-bottom: 0.1875rem solid #B80000;
  clear: both;
}

@media (min-width: 37.5rem) {
  .emotion-19 {
    display: none;
    visibility: hidden;
  }
}

.emotion-20 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-21 {
  padding: 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-21:last-child {
  border: 0;
}

.emotion-22 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  position: relative;
  padding: 0.75rem 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-22 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-22 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-22:hover {
  background-color: #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-22:hover::before {
  opacity: 1;
}

.emotion-22::before {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 100%;
  width: 0.25rem;
  background: #B80000;
  display: block;
  opacity: 0;
}

.emotion-22:focus-visible {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
  outline-offset: -0.1875rem;
}

.emotion-23 {
  width: 100%;
  position: relative;
  z-index: 1;
}

@media (max-width: 37.4375rem) {
  .emotion-24.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-24 {
    position: relative;
    min-width: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }

  .emotion-24::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    top: 0;
    inset-inline-end: 0;
    z-index: 3;
    pointer-events: none;
  }

  @media (min-width: 25rem) {
    .emotion-24::after {
      width: 6rem;
    }
  }
}

.emotion-24::after {
  background: linear-gradient(to right, transparent 0%, #FFFFFF 100%);
}

.emotion-24[dir="rtl"]::after {
  background: linear-gradient(to left, transparent 0%, #FFFFFF 100%);
}

.emotion-24 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-24 li a {
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-24 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #B0B2B4;
  display: block;
  opacity: 1;
}

.emotion-24 li:last-child:before {
  display: none;
}

.emotion-27 {
  position: relative;
}

.emotion-27::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 100vw;
  border-bottom: 0.0625rem solid #E6E8EA;
}

<div>
  <div
    class="emotion-0"
  />
  <nav
    class="emotion-1"
    dir="ltr"
    id="si-nav"
    role="navigation"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <div
                class="emotion-7"
              >
                <ul
                  class="emotion-8"
                  role="list"
                >
                  <li
                    class="emotion-9"
                    dir="ltr"
                    role="listitem"
                  >
                    <a
                      class="focusIndicatorRemove emotion-10"
                      href="/news"
                    >
                      Home
                    </a>
                  </li>
                  <li
                    class="emotion-9"
                    dir="ltr"
                    role="listitem"
                  >
                    <a
                      class="focusIndicatorRemove emotion-10"
                      href="/about"
                    >
                      About
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <amp-state
              id="menuState"
            >
              <script
                type="application/json"
              >
                {"expanded":false}
              </script>
            </amp-state>
            <button
              aria-expanded="false"
              aria-label="Sections"
              class="focusIndicatorRemove emotion-13"
              data-amp-bind-aria-expanded="menuState.expanded ? "true" : "false""
              dir="ltr"
              on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
              si-nav-dropdown-menu.toggleVisibility,
              si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
              si-nav.toggleClass(class=si-nav-open)
            "
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-14 emotion-15"
                data-amp-bind-hidden="menuState.expanded"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="emotion-14 emotion-15"
                data-amp-bind-hidden="!menuState.expanded"
                focusable="false"
                height="2.75rem"
                hidden=""
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="emotion-18"
              >
                Sections
              </span>
            </button>
          </div>
          <div
            class="emotion-19"
            data-e2e="dropdown-nav"
            hidden=""
            id="si-nav-dropdown-menu"
          >
            <ul
              class="emotion-20"
              role="list"
            >
              <li
                class="emotion-21"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-22"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="emotion-23"
        >
          <div
            class="emotion-24"
            data-e2e="scrollable-nav-secondary"
            dir="ltr"
            id="si-nav-scrollable"
          >
            <div
              class="emotion-7"
            >
              <ul
                class="emotion-8"
                role="list"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-27"
      />
    </div>
  </nav>
</div>
`;

exports[`Navigation should correctly render amp navigation on non-home navigation page 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  margin: 0 auto;
  border-bottom: 0.0625rem solid #B80000;
  opacity: 0.7;
}

.emotion-1 {
  position: relative;
  background-color: #FFFFFF;
}

@media (max-width: 37.4375rem) {
  .emotion-1.si-nav-open {
    background-color: #222222;
  }
}

.emotion-2 {
  position: relative;
  max-width: 63.4rem;
  margin: 0 auto;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-2 {
    margin: 0 auto;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-4 {
  position: relative;
  width: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  z-index: 0;
}

.emotion-5::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: #B80000;
  pointer-events: none;
}

@media (max-width: 37.4375rem) {
  .emotion-6.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-6 {
    position: relative;
    min-width: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }

  .emotion-6::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    top: 0;
    inset-inline-end: 0;
    z-index: 3;
    pointer-events: none;
  }

  @media (min-width: 25rem) {
    .emotion-6::after {
      width: 6rem;
    }
  }
}

.emotion-6::after {
  background: linear-gradient(to right, transparent 0%, #B80000 100%);
}

.emotion-6[dir="rtl"]::after {
  background: linear-gradient(to left, transparent 0%, #B80000 100%);
}

.emotion-6 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-6 li a {
  color: #FFFFFF;
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 li a:hover::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li a:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a[data-active="true"] span::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #FFFFFF;
  display: block;
  opacity: 0.3;
}

.emotion-6 li:last-child:before {
  display: none;
}

@media (max-width: 37.4375rem) {
  .emotion-7 {
    position: relative;
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-padding-end: 3rem;
    padding-inline-end: 3rem;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  @media (min-width: 25rem) {
    .emotion-7 {
      -webkit-padding-end: 6rem;
      padding-inline-end: 6rem;
    }
  }

  .emotion-7::-webkit-scrollbar {
    display: none;
  }

  .emotion-7:focus-visible {
    outline: none;
  }

  .emotion-7:focus-visible::after {
    content: '';
    position: absolute;
    inset: 0;
    outline: 0.1875rem solid #000000;
  }
}

.emotion-8 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    overflow: hidden;
  }
}

.emotion-9 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

@media (min-width: 37.5rem) {
  .emotion-9::after {
    content: '';
    position: absolute;
    bottom: -0.0625rem;
    width: 63.5rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-10 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-10 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-10:hover::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-10:focus::after,
.emotion-10:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.1875rem solid #000000;
}

.emotion-13::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-14 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-15 {
  position: relative;
  padding: 0;
  margin: 0;
  border: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  float: inline-start;
  background-color: #B80000;
  color: #FFFFFF;
  width: 2.75rem;
  height: 2.75rem;
}

@media (min-width: 37.5rem) {
  .emotion-15 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-15 {
    width: 2.75rem;
    height: 2.75rem;
  }
}

.emotion-15 svg {
  vertical-align: middle;
  fill: #FFFFFF;
}

.emotion-15:hover,
.emotion-15:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-15:hover::after,
.emotion-15:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.25rem solid #000000;
}

.emotion-16 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-16 {
    fill: linkText;
  }
}

.emotion-21 {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: 99999;
  background-color: #FFFFFF;
  border-bottom: 0.1875rem solid #B80000;
  clear: both;
}

@media (min-width: 37.5rem) {
  .emotion-21 {
    display: none;
    visibility: hidden;
  }
}

.emotion-22 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-23 {
  padding: 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-23:last-child {
  border: 0;
}

.emotion-24 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  position: relative;
  padding: 0.75rem 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-24 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-24 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-24:hover {
  background-color: #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-24:hover::before {
  opacity: 1;
}

.emotion-24::before {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 100%;
  width: 0.25rem;
  background: #B80000;
  display: block;
  opacity: 0;
}

.emotion-24:focus-visible {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
  outline-offset: -0.1875rem;
}

.emotion-25 {
  width: 100%;
  position: relative;
  z-index: 1;
}

@media (max-width: 37.4375rem) {
  .emotion-26.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-26 {
    position: relative;
    min-width: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }

  .emotion-26::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    top: 0;
    inset-inline-end: 0;
    z-index: 3;
    pointer-events: none;
  }

  @media (min-width: 25rem) {
    .emotion-26::after {
      width: 6rem;
    }
  }
}

.emotion-26::after {
  background: linear-gradient(to right, transparent 0%, #FFFFFF 100%);
}

.emotion-26[dir="rtl"]::after {
  background: linear-gradient(to left, transparent 0%, #FFFFFF 100%);
}

.emotion-26 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-26 li a {
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-26 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #B0B2B4;
  display: block;
  opacity: 1;
}

.emotion-26 li:last-child:before {
  display: none;
}

.emotion-29 {
  position: relative;
}

.emotion-29::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 100vw;
  border-bottom: 0.0625rem solid #E6E8EA;
}

<div>
  <div
    class="emotion-0"
  />
  <nav
    class="emotion-1"
    dir="ltr"
    id="si-nav"
    role="navigation"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <div
                class="emotion-7"
              >
                <ul
                  class="emotion-8"
                  role="list"
                >
                  <li
                    class="emotion-9"
                    dir="ltr"
                    role="listitem"
                  >
                    <a
                      class="focusIndicatorRemove emotion-10"
                      href="/news"
                    >
                      Home
                    </a>
                  </li>
                  <li
                    class="emotion-9"
                    dir="ltr"
                    role="listitem"
                  >
                    <a
                      aria-label="About"
                      class="focusIndicatorRemove emotion-10"
                      data-active="true"
                      href="/about"
                    >
                      <span
                        class="emotion-13"
                        id="NavigationLinks-About"
                        role="text"
                      >
                        <span
                          class="emotion-14"
                        >
                          Current page, 
                        </span>
                        About
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <amp-state
              id="menuState"
            >
              <script
                type="application/json"
              >
                {"expanded":false}
              </script>
            </amp-state>
            <button
              aria-expanded="false"
              aria-label="Sections"
              class="focusIndicatorRemove emotion-15"
              data-amp-bind-aria-expanded="menuState.expanded ? "true" : "false""
              dir="ltr"
              on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
              si-nav-dropdown-menu.toggleVisibility,
              si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
              si-nav.toggleClass(class=si-nav-open)
            "
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-16 emotion-17"
                data-amp-bind-hidden="menuState.expanded"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="emotion-16 emotion-17"
                data-amp-bind-hidden="!menuState.expanded"
                focusable="false"
                height="2.75rem"
                hidden=""
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="emotion-14"
              >
                Sections
              </span>
            </button>
          </div>
          <div
            class="emotion-21"
            data-e2e="dropdown-nav"
            hidden=""
            id="si-nav-dropdown-menu"
          >
            <ul
              class="emotion-22"
              role="list"
            >
              <li
                class="emotion-23"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-24"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="emotion-25"
        >
          <div
            class="emotion-26"
            data-e2e="scrollable-nav-secondary"
            dir="ltr"
            id="si-nav-scrollable"
          >
            <div
              class="emotion-7"
            >
              <ul
                class="emotion-8"
                role="list"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-29"
      />
    </div>
  </nav>
</div>
`;

exports[`Navigation should correctly render canonical navigation 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  margin: 0 auto;
  border-bottom: 0.0625rem solid #B80000;
  opacity: 0.7;
}

.emotion-1 {
  position: relative;
  background-color: #FFFFFF;
}

.emotion-2 {
  position: relative;
  max-width: 63.4rem;
  margin: 0 auto;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-2 {
    margin: 0 auto;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-4 {
  position: relative;
  width: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  z-index: 0;
}

.emotion-5::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: #B80000;
  pointer-events: none;
}

@media (max-width: 37.4375rem) {
  .emotion-6.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-6 {
    position: relative;
    min-width: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }

  .emotion-6::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    top: 0;
    inset-inline-end: 0;
    z-index: 3;
    pointer-events: none;
  }

  @media (min-width: 25rem) {
    .emotion-6::after {
      width: 6rem;
    }
  }
}

.emotion-6::after {
  background: linear-gradient(to right, transparent 0%, #B80000 100%);
}

.emotion-6[dir="rtl"]::after {
  background: linear-gradient(to left, transparent 0%, #B80000 100%);
}

.emotion-6 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-6 li a {
  color: #FFFFFF;
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 li a:hover::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li a:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a[data-active="true"] span::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #FFFFFF;
  display: block;
  opacity: 0.3;
}

.emotion-6 li:last-child:before {
  display: none;
}

@media (max-width: 37.4375rem) {
  .emotion-7 {
    position: relative;
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-padding-end: 3rem;
    padding-inline-end: 3rem;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  @media (min-width: 25rem) {
    .emotion-7 {
      -webkit-padding-end: 6rem;
      padding-inline-end: 6rem;
    }
  }

  .emotion-7::-webkit-scrollbar {
    display: none;
  }

  .emotion-7:focus-visible {
    outline: none;
  }

  .emotion-7:focus-visible::after {
    content: '';
    position: absolute;
    inset: 0;
    outline: 0.1875rem solid #000000;
  }
}

.emotion-8 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    overflow: hidden;
  }
}

.emotion-9 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

@media (min-width: 37.5rem) {
  .emotion-9::after {
    content: '';
    position: absolute;
    bottom: -0.0625rem;
    width: 63.5rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-10 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-10 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-10:hover::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-10:focus::after,
.emotion-10:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.1875rem solid #000000;
}

.emotion-11::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-12 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-15 {
  position: relative;
  padding: 0;
  margin: 0;
  border: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  float: inline-start;
  background-color: #B80000;
  color: #FFFFFF;
  width: 2.75rem;
  height: 2.75rem;
}

@media (min-width: 37.5rem) {
  .emotion-15 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-15 {
    width: 2.75rem;
    height: 2.75rem;
  }
}

.emotion-15 svg {
  vertical-align: middle;
  fill: #FFFFFF;
}

.emotion-15:hover,
.emotion-15:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-15:hover::after,
.emotion-15:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.25rem solid #000000;
}

.emotion-16 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-16 {
    fill: linkText;
  }
}

.emotion-19 {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: 99999;
  background-color: #FFFFFF;
  border-bottom: 0.1875rem solid #B80000;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  transition-timing-function: cubic-bezier(0, 0, 0.58, 1);
  visibility: hidden;
}

@media (min-width: 37.5rem) {
  .emotion-19 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion: reduce) {
  .emotion-19 {
    -webkit-transition: none;
    transition: none;
  }
}

.emotion-20 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-21 {
  padding: 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-21:last-child {
  border: 0;
}

.emotion-22 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  position: relative;
  padding: 0.75rem 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-22 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-22 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-22:hover {
  background-color: #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-22:hover::before {
  opacity: 1;
}

.emotion-22::before {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 100%;
  width: 0.25rem;
  background: #B80000;
  display: block;
  opacity: 0;
}

.emotion-22:focus-visible {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
  outline-offset: -0.1875rem;
}

.emotion-23 {
  width: 100%;
  position: relative;
  z-index: 1;
}

@media (max-width: 37.4375rem) {
  .emotion-24.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-24 {
    position: relative;
    min-width: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }

  .emotion-24::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    top: 0;
    inset-inline-end: 0;
    z-index: 3;
    pointer-events: none;
  }

  @media (min-width: 25rem) {
    .emotion-24::after {
      width: 6rem;
    }
  }
}

.emotion-24::after {
  background: linear-gradient(to right, transparent 0%, #FFFFFF 100%);
}

.emotion-24[dir="rtl"]::after {
  background: linear-gradient(to left, transparent 0%, #FFFFFF 100%);
}

.emotion-24 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-24 li a {
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-24 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #B0B2B4;
  display: block;
  opacity: 1;
}

.emotion-24 li:last-child:before {
  display: none;
}

.emotion-27 {
  position: relative;
}

.emotion-27::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 100vw;
  border-bottom: 0.0625rem solid #E6E8EA;
}

<div>
  <div
    class="emotion-0"
  />
  <nav
    class="emotion-1"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <div
                class="emotion-7"
              >
                <ul
                  class="emotion-8"
                  role="list"
                >
                  <li
                    class="emotion-9"
                    dir="ltr"
                    role="listitem"
                  >
                    <a
                      aria-label="Home"
                      class="focusIndicatorRemove emotion-10"
                      data-active="true"
                      href="/news"
                    >
                      <span
                        class="emotion-11"
                        id="NavigationLinks-Home"
                        role="text"
                      >
                        <span
                          class="emotion-12"
                        >
                          Current page, 
                        </span>
                        Home
                      </span>
                    </a>
                  </li>
                  <li
                    class="emotion-9"
                    dir="ltr"
                    role="listitem"
                  >
                    <a
                      class="focusIndicatorRemove emotion-10"
                      href="/about"
                    >
                      About
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <button
              aria-expanded="false"
              aria-label="Sections"
              class="focusIndicatorRemove emotion-15"
              dir="ltr"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-16 emotion-17"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <span
                class="emotion-12"
              >
                Sections
              </span>
            </button>
          </div>
          <div
            class="emotion-19"
            data-e2e="dropdown-nav"
            style="height: 0px;"
          >
            <ul
              class="emotion-20"
              role="list"
            >
              <li
                class="emotion-21"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-22"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="emotion-23"
        >
          <div
            class="emotion-24"
            data-e2e="scrollable-nav-secondary"
            dir="ltr"
          >
            <div
              class="emotion-7"
            >
              <ul
                class="emotion-8"
                role="list"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-27"
      />
    </div>
  </nav>
</div>
`;

exports[`Navigation should correctly render canonical navigation on a URL not associated with navigation items 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  margin: 0 auto;
  border-bottom: 0.0625rem solid #B80000;
  opacity: 0.7;
}

.emotion-1 {
  position: relative;
  background-color: #FFFFFF;
}

.emotion-2 {
  position: relative;
  max-width: 63.4rem;
  margin: 0 auto;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-2 {
    margin: 0 auto;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-4 {
  position: relative;
  width: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  z-index: 0;
}

.emotion-5::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: #B80000;
  pointer-events: none;
}

@media (max-width: 37.4375rem) {
  .emotion-6.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-6 {
    position: relative;
    min-width: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }

  .emotion-6::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    top: 0;
    inset-inline-end: 0;
    z-index: 3;
    pointer-events: none;
  }

  @media (min-width: 25rem) {
    .emotion-6::after {
      width: 6rem;
    }
  }
}

.emotion-6::after {
  background: linear-gradient(to right, transparent 0%, #B80000 100%);
}

.emotion-6[dir="rtl"]::after {
  background: linear-gradient(to left, transparent 0%, #B80000 100%);
}

.emotion-6 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-6 li a {
  color: #FFFFFF;
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 li a:hover::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li a:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a[data-active="true"] span::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #FFFFFF;
  display: block;
  opacity: 0.3;
}

.emotion-6 li:last-child:before {
  display: none;
}

@media (max-width: 37.4375rem) {
  .emotion-7 {
    position: relative;
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-padding-end: 3rem;
    padding-inline-end: 3rem;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  @media (min-width: 25rem) {
    .emotion-7 {
      -webkit-padding-end: 6rem;
      padding-inline-end: 6rem;
    }
  }

  .emotion-7::-webkit-scrollbar {
    display: none;
  }

  .emotion-7:focus-visible {
    outline: none;
  }

  .emotion-7:focus-visible::after {
    content: '';
    position: absolute;
    inset: 0;
    outline: 0.1875rem solid #000000;
  }
}

.emotion-8 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    overflow: hidden;
  }
}

.emotion-9 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

@media (min-width: 37.5rem) {
  .emotion-9::after {
    content: '';
    position: absolute;
    bottom: -0.0625rem;
    width: 63.5rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-10 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-10 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-10:hover::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-10:focus::after,
.emotion-10:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.1875rem solid #000000;
}

.emotion-13 {
  position: relative;
  padding: 0;
  margin: 0;
  border: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  float: inline-start;
  background-color: #B80000;
  color: #FFFFFF;
  width: 2.75rem;
  height: 2.75rem;
}

@media (min-width: 37.5rem) {
  .emotion-13 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-13 {
    width: 2.75rem;
    height: 2.75rem;
  }
}

.emotion-13 svg {
  vertical-align: middle;
  fill: #FFFFFF;
}

.emotion-13:hover,
.emotion-13:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-13:hover::after,
.emotion-13:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.25rem solid #000000;
}

.emotion-14 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-14 {
    fill: linkText;
  }
}

.emotion-16 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-17 {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: 99999;
  background-color: #FFFFFF;
  border-bottom: 0.1875rem solid #B80000;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  transition-timing-function: cubic-bezier(0, 0, 0.58, 1);
  visibility: hidden;
}

@media (min-width: 37.5rem) {
  .emotion-17 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion: reduce) {
  .emotion-17 {
    -webkit-transition: none;
    transition: none;
  }
}

.emotion-18 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-19 {
  padding: 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-19:last-child {
  border: 0;
}

.emotion-20 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  position: relative;
  padding: 0.75rem 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-20 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-20 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-20:hover {
  background-color: #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-20:hover::before {
  opacity: 1;
}

.emotion-20::before {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 100%;
  width: 0.25rem;
  background: #B80000;
  display: block;
  opacity: 0;
}

.emotion-20:focus-visible {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
  outline-offset: -0.1875rem;
}

.emotion-21 {
  width: 100%;
  position: relative;
  z-index: 1;
}

@media (max-width: 37.4375rem) {
  .emotion-22.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-22 {
    position: relative;
    min-width: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }

  .emotion-22::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    top: 0;
    inset-inline-end: 0;
    z-index: 3;
    pointer-events: none;
  }

  @media (min-width: 25rem) {
    .emotion-22::after {
      width: 6rem;
    }
  }
}

.emotion-22::after {
  background: linear-gradient(to right, transparent 0%, #FFFFFF 100%);
}

.emotion-22[dir="rtl"]::after {
  background: linear-gradient(to left, transparent 0%, #FFFFFF 100%);
}

.emotion-22 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-22 li a {
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-22 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #B0B2B4;
  display: block;
  opacity: 1;
}

.emotion-22 li:last-child:before {
  display: none;
}

.emotion-25 {
  position: relative;
}

.emotion-25::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 100vw;
  border-bottom: 0.0625rem solid #E6E8EA;
}

<div>
  <div
    class="emotion-0"
  />
  <nav
    class="emotion-1"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <div
                class="emotion-7"
              >
                <ul
                  class="emotion-8"
                  role="list"
                >
                  <li
                    class="emotion-9"
                    dir="ltr"
                    role="listitem"
                  >
                    <a
                      class="focusIndicatorRemove emotion-10"
                      href="/news"
                    >
                      Home
                    </a>
                  </li>
                  <li
                    class="emotion-9"
                    dir="ltr"
                    role="listitem"
                  >
                    <a
                      class="focusIndicatorRemove emotion-10"
                      href="/about"
                    >
                      About
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <button
              aria-expanded="false"
              aria-label="Sections"
              class="focusIndicatorRemove emotion-13"
              dir="ltr"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-14 emotion-15"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <span
                class="emotion-16"
              >
                Sections
              </span>
            </button>
          </div>
          <div
            class="emotion-17"
            data-e2e="dropdown-nav"
            style="height: 0px;"
          >
            <ul
              class="emotion-18"
              role="list"
            >
              <li
                class="emotion-19"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-20"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="emotion-21"
        >
          <div
            class="emotion-22"
            data-e2e="scrollable-nav-secondary"
            dir="ltr"
          >
            <div
              class="emotion-7"
            >
              <ul
                class="emotion-8"
                role="list"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-25"
      />
    </div>
  </nav>
</div>
`;

exports[`Navigation should correctly render canonical navigation on non-home navigation page 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  margin: 0 auto;
  border-bottom: 0.0625rem solid #B80000;
  opacity: 0.7;
}

.emotion-1 {
  position: relative;
  background-color: #FFFFFF;
}

.emotion-2 {
  position: relative;
  max-width: 63.4rem;
  margin: 0 auto;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-2 {
    margin: 0 auto;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-4 {
  position: relative;
  width: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  z-index: 0;
}

.emotion-5::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: #B80000;
  pointer-events: none;
}

@media (max-width: 37.4375rem) {
  .emotion-6.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-6 {
    position: relative;
    min-width: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }

  .emotion-6::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    top: 0;
    inset-inline-end: 0;
    z-index: 3;
    pointer-events: none;
  }

  @media (min-width: 25rem) {
    .emotion-6::after {
      width: 6rem;
    }
  }
}

.emotion-6::after {
  background: linear-gradient(to right, transparent 0%, #B80000 100%);
}

.emotion-6[dir="rtl"]::after {
  background: linear-gradient(to left, transparent 0%, #B80000 100%);
}

.emotion-6 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-6 li a {
  color: #FFFFFF;
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 li a:hover::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li a:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a[data-active="true"] span::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #FFFFFF;
  display: block;
  opacity: 0.3;
}

.emotion-6 li:last-child:before {
  display: none;
}

@media (max-width: 37.4375rem) {
  .emotion-7 {
    position: relative;
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-padding-end: 3rem;
    padding-inline-end: 3rem;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  @media (min-width: 25rem) {
    .emotion-7 {
      -webkit-padding-end: 6rem;
      padding-inline-end: 6rem;
    }
  }

  .emotion-7::-webkit-scrollbar {
    display: none;
  }

  .emotion-7:focus-visible {
    outline: none;
  }

  .emotion-7:focus-visible::after {
    content: '';
    position: absolute;
    inset: 0;
    outline: 0.1875rem solid #000000;
  }
}

.emotion-8 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    overflow: hidden;
  }
}

.emotion-9 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

@media (min-width: 37.5rem) {
  .emotion-9::after {
    content: '';
    position: absolute;
    bottom: -0.0625rem;
    width: 63.5rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-10 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-10 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-10:hover::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-10:focus::after,
.emotion-10:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.1875rem solid #000000;
}

.emotion-13::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-14 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-15 {
  position: relative;
  padding: 0;
  margin: 0;
  border: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  float: inline-start;
  background-color: #B80000;
  color: #FFFFFF;
  width: 2.75rem;
  height: 2.75rem;
}

@media (min-width: 37.5rem) {
  .emotion-15 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-15 {
    width: 2.75rem;
    height: 2.75rem;
  }
}

.emotion-15 svg {
  vertical-align: middle;
  fill: #FFFFFF;
}

.emotion-15:hover,
.emotion-15:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-15:hover::after,
.emotion-15:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.25rem solid #000000;
}

.emotion-16 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-16 {
    fill: linkText;
  }
}

.emotion-19 {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: 99999;
  background-color: #FFFFFF;
  border-bottom: 0.1875rem solid #B80000;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  transition-timing-function: cubic-bezier(0, 0, 0.58, 1);
  visibility: hidden;
}

@media (min-width: 37.5rem) {
  .emotion-19 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion: reduce) {
  .emotion-19 {
    -webkit-transition: none;
    transition: none;
  }
}

.emotion-20 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-21 {
  padding: 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-21:last-child {
  border: 0;
}

.emotion-22 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  position: relative;
  padding: 0.75rem 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-22 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-22 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-22:hover {
  background-color: #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-22:hover::before {
  opacity: 1;
}

.emotion-22::before {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 100%;
  width: 0.25rem;
  background: #B80000;
  display: block;
  opacity: 0;
}

.emotion-22:focus-visible {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
  outline-offset: -0.1875rem;
}

.emotion-23 {
  width: 100%;
  position: relative;
  z-index: 1;
}

@media (max-width: 37.4375rem) {
  .emotion-24.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-24 {
    position: relative;
    min-width: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }

  .emotion-24::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    top: 0;
    inset-inline-end: 0;
    z-index: 3;
    pointer-events: none;
  }

  @media (min-width: 25rem) {
    .emotion-24::after {
      width: 6rem;
    }
  }
}

.emotion-24::after {
  background: linear-gradient(to right, transparent 0%, #FFFFFF 100%);
}

.emotion-24[dir="rtl"]::after {
  background: linear-gradient(to left, transparent 0%, #FFFFFF 100%);
}

.emotion-24 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-24 li a {
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-24 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #B0B2B4;
  display: block;
  opacity: 1;
}

.emotion-24 li:last-child:before {
  display: none;
}

.emotion-27 {
  position: relative;
}

.emotion-27::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 100vw;
  border-bottom: 0.0625rem solid #E6E8EA;
}

<div>
  <div
    class="emotion-0"
  />
  <nav
    class="emotion-1"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <div
                class="emotion-7"
              >
                <ul
                  class="emotion-8"
                  role="list"
                >
                  <li
                    class="emotion-9"
                    dir="ltr"
                    role="listitem"
                  >
                    <a
                      class="focusIndicatorRemove emotion-10"
                      href="/news"
                    >
                      Home
                    </a>
                  </li>
                  <li
                    class="emotion-9"
                    dir="ltr"
                    role="listitem"
                  >
                    <a
                      aria-label="About"
                      class="focusIndicatorRemove emotion-10"
                      data-active="true"
                      href="/about"
                    >
                      <span
                        class="emotion-13"
                        id="NavigationLinks-About"
                        role="text"
                      >
                        <span
                          class="emotion-14"
                        >
                          Current page, 
                        </span>
                        About
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <button
              aria-expanded="false"
              aria-label="Sections"
              class="focusIndicatorRemove emotion-15"
              dir="ltr"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-16 emotion-17"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <span
                class="emotion-14"
              >
                Sections
              </span>
            </button>
          </div>
          <div
            class="emotion-19"
            data-e2e="dropdown-nav"
            style="height: 0px;"
          >
            <ul
              class="emotion-20"
              role="list"
            >
              <li
                class="emotion-21"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-22"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="emotion-23"
        >
          <div
            class="emotion-24"
            data-e2e="scrollable-nav-secondary"
            dir="ltr"
          >
            <div
              class="emotion-7"
            >
              <ul
                class="emotion-8"
                role="list"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-27"
      />
    </div>
  </nav>
</div>
`;
